--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -19,7 +19,8 @@ jobs:
           python-version: '3.10'
 
       - name: Install OpenAI SDK
-        run: pip install openai
+        run: pip install openai==0.28
+
 
       - name: Run Danmatsu Generator
         env:
