--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -28,6 +28,8 @@ jobs:
           python generate_danmatsu.py
 
       - name: Commit and Push Changes
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "syntax-death"
           git config user.email "no-reply@syntax.death"
@@ -36,5 +38,5 @@ jobs:
             echo "No changes to commit."
           else
             git commit -m "🤖 Auto-generated danmatsu log"
-            git push
+            git push https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git HEAD:main
           fi
