--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -27,16 +27,11 @@ jobs:
         run: |
           python generate_danmatsu.py
 
-      - name: Commit and Push Changes
+      - name: Debug whoami
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "syntax-death"
           git config user.email "no-reply@syntax.death"
-          git add .
-          if git diff --cached --quiet; then
-            echo "No changes to commit."
-          else
-            git commit -m "🤖 Auto-generated danmatsu log"
-            git push https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git HEAD:main
-          fi
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git
+          git ls-remote origin
