--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -41,3 +41,17 @@ jobs:
           cat last_number.txt || echo "no last_number"
           ls -l
           cat No.0007.md || echo "No file yet"
+     
+      - name: Commit and Push Changes
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config user.name "syntax-death"
+          git config user.email "no-reply@syntax.death"
+          git add .
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "🤖 Auto-generated danmatsu log"
+            git push https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git HEAD:main
+          fi
