--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -24,31 +24,15 @@ jobs:
       - name: Run Danmatsu Generator
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: |
-          python generate_danmatsu.py
+        run: python generate_danmatsu.py
 
-      - name: Debug whoami
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          git config user.name "syntax-death"
-          git config user.email "no-reply@syntax.death"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git
-          git ls-remote origin
-     
-      - name: Debug Output
-        run: |
-          cat last_number.txt || echo "no last_number"
-          ls -l
-          cat No.0007.md || echo "No file yet"
-     
       - name: Commit and Push Changes
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "syntax-death"
           git config user.email "no-reply@syntax.death"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/groovy1985/Last-Words-Archive.git
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
