--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -2,8 +2,8 @@ name: Generate and Commit Danmatsu
 
 on:
   schedule:
-    - cron: '0 6,10,14,18,22 * * *'  # 1日5回（JST 15:00, 19:00, 23:00, 3:00, 7:00）
-  workflow_dispatch: {}
+    - cron: '0 6,10,14,18,22 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
