--- a/.github/workflows/generate-and-commit.yml
+++ b/.github/workflows/generate-and-commit.yml
@@ -64,3 +64,13 @@ jobs:
             -H "Authorization: Bearer ${POEMKUN_PAT}" \
             https://api.github.com/repos/groovy1985/poem_kun/dispatches \
             -d '{"event_type":"post_update_trigger","client_payload":{"repo":"last-words","trigger":"dispatch"}}'
+
+      - name: 👵 Notify Babaa Bot via GitHub Dispatch
+        env:
+          BABAA_PAT: ${{ secrets.BABAA_PAT }}
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${BABAA_PAT}" \
+            https://api.github.com/repos/groovy1985/babaa-bot/dispatches \
+            -d '{"event_type":"babaa_post_update_trigger","client_payload":{"repo":"last-words","trigger":"dispatch"}}'
